--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,12 +14,12 @@ jobs:
         uses: actions/checkout@master
 
       - name: tfsec
-        uses: tfsec/tfsec-sarif-action@main
+        uses: aquasecurity/tfsec-sarif-action@v0.1.0
         with:
-          sarif_file: tfsec.sarif         
+          sarif_file: tfsec.sarif          
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
           # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif    
+          sarif_file: tfsec.sarif 
